--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -18,5 +18,6 @@
             <td th:text="${product.cost}"></td>
         </tr>
     </table>
+    <a href="http://localhost:8080/products/add">Добавить продукт</a>
 </body>
 </html>
