--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add new product</title>
+    <title>Редактирование товара</title>
 </head>
 <body>
     <form th:action="@{'/save'}" th:object="${product}" method="post">
