--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -13,13 +13,14 @@
             <th>Цена</th>
         </tr>
         <tr th:each="product : ${products}">
-            <form action="index.html" th:action="@{/{id}/delete(id=${product.id})}">
+            <form action="edit.html" th:action="@{/{id}/edit(id=${product.id})}">
                 <td th:text="${product.id}"></td>
                 <td th:text="${product.title}"></td>
                 <td th:text="${product.cost}"></td>
-                <td><button type="submit">Удалить</button></td>
+                <td><button type="submit">Редактировать</button></td>
             </form>
         </tr>
     </table>
+    <a href="add.html" th:href="@{/add}">Добавить продукт</a>
 </body>
 </html>
