--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -5,11 +5,8 @@
     <title>Add new product</title>
 </head>
 <body>
-    <form th:action="@{'/save'}" th:object="${product}" method="post">
-        Title: <input type="text" th:field="*{title}"/>
-        <br>
-        Cost: <input type="text" th:field="*{cost}"/>
-        <br>
+    <form th:action="@{'users/save'}" th:object="${user}" method="post">
+        Имя пользователя: <input type="text" th:field="*{username}"/>
         <button type="submit">Save</button>
     </form>
 </body>
